--- a/lesson 2/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/lesson 2/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -4,13 +4,8 @@
       <button class="btn btn-success pull-right">New Contact</button>
   </div>
   <div class="panel-body">
-      <a href="#" class="list-group-item clearfix" *ngFor="let contact of contacts">
-        <div class="pull-left">
-          <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-        </div>
-        <span class="pull-right">
-        <img src="{{ contact.imageUrl }}" alt="{{ contact.name }}" class="img-responsive" style="max-height: 50px;">
-      </span>
-      </a>
+      <cms-contact-item *ngFor="let contactEl of contacts"
+      [contact]="contactEl"
+      (contactSelected)="onContactSelected(contactEl)"></cms-contact-item>
   </div>
 </div>
