--- a/lesson 2/cms/src/app/documents/documents.component.html
+++ b/lesson 2/cms/src/app/documents/documents.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-3">
-    <cms-document-list></cms-document-list>
+    <cms-document-list (selectedDocumentEvent)="selectedDocument = $event"></cms-document-list>
   </div>
   <div class="col-md-9">
-    <cms-document-detail></cms-document-detail>
+    <cms-document-detail *ngIf="selectedDocument;" [document]="selectedDocument"></cms-document-detail>
   </div>
 </div>
