--- a/lesson 2/cms/src/app/contacts/contacts.component.html
+++ b/lesson 2/cms/src/app/contacts/contacts.component.html
@@ -1,13 +1,15 @@
 <div class="row">
   <div class="col-md-5">
-    <cms-contact-list (contactWasSelected)="selectedContact = $event" ></cms-contact-list>
+    <cms-contact-list></cms-contact-list>
   </div>
   <div class="col-md-4">
     <cms-contact-detail
       *ngIf="selectedContact; else infoText"
-        [contact]="selectedContact"></cms-contact-detail> 
+        [selectedContact]="selectedContact"></cms-contact-detail> 
     <ng-template #infoText>
+      <div class="container">
       <p>Please select a Contact</p>
+      </div>
     </ng-template>
   </div>
 </div>
