--- a/lesson 2/cms/src/app/documents/documents.component.html
+++ b/lesson 2/cms/src/app/documents/documents.component.html
@@ -3,6 +3,6 @@
     <cms-document-list (selectedDocumentEvent)="selectedDocument = $event"></cms-document-list>
   </div>
   <div class="col-md-9">
-    <cms-document-detail *ngIf="selectedDocument;" [document]="selectedDocument"></cms-document-detail>
+    <cms-document-detail *ngIf="selectedDocument;" [selectedDocument]="selectedDocument"></cms-document-detail>
   </div>
 </div>
