--- a/lesson 2/cms/src/app/app.component.html
+++ b/lesson 2/cms/src/app/app.component.html
@@ -1,4 +1,4 @@
-<cms-header (featureSelected)="onNavigate($event)"></cms-header> 
-<cms-contacts *ngIf="loadedFeature === 'contacts'"></cms-contacts>
-<cms-messages *ngIf="loadedFeature === 'messages'"></cms-messages>
-<cms-documents *ngIf="loadedFeature === 'documents'"></cms-documents>
+<cms-header></cms-header>
+<div class="container pull-left">
+  <router-outlet></router-outlet>
+</div>
