--- a/lesson 2/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/lesson 2/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -1,11 +1,9 @@
 <div class="panel panel-default">
   <div class="panel-heading clearfix">
     <h4 class="panel-title pull-left"><strong>Contacts</strong></h4>
-      <button class="btn btn-success pull-right">New Contact</button>
+    <button routerLink="new" class="btn btn-success pull-right">New Contact</button>
   </div>
   <div class="panel-body">
-      <cms-contact-item *ngFor="let contactEl of contacts"
-      [contact]="contactEl"
-      (contactSelected)="onContactSelected(contactEl)"></cms-contact-item>
+    <cms-contact-item *ngFor="let contactEl of contacts" [contact]="contactEl"></cms-contact-item>
   </div>
 </div>
