--- a/lesson 2/cms/src/app/contacts/contacts.component.html
+++ b/lesson 2/cms/src/app/contacts/contacts.component.html
@@ -3,13 +3,6 @@
     <cms-contact-list></cms-contact-list>
   </div>
   <div class="col-md-4">
-    <cms-contact-detail
-      *ngIf="selectedContact; else infoText"
-        [selectedContact]="selectedContact"></cms-contact-detail> 
-    <ng-template #infoText>
-      <div class="container">
-      <p>Please select a Contact</p>
-      </div>
-    </ng-template>
+    <router-outlet></router-outlet>
   </div>
 </div>
