--- a/lesson 2/cms/src/app/header.component.html
+++ b/lesson 2/cms/src/app/header.component.html
@@ -5,9 +5,9 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="onNavSelected('contacts')">Contacts</a></li>
-        <li><a href="#" (click)="onNavSelected('documents')">Documents</a></li>
-        <li><a href="#" (click)="onNavSelected('messages')">Messages</a></li>
+        <li routerLinkActive="active"><a routerLink="/contacts">Contacts</a></li>
+        <li routerLinkActive="active"><a routerLink="/documents">Documents</a></li>
+        <li routerLinkActive="active"><a routerLink="/messages">Messages</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
