--- a/lesson 2/cms/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/lesson 2/cms/src/app/contacts/contact-edit/contact-edit.component.html
@@ -1,3 +1,53 @@
-<p>
-  contact-edit works!
-</p>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <form id="contact-edit" #f="ngForm" (ngSubmit)="onSubmit(f)">
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="name">Name</label>
+          <input #name="ngModel" name="name" [ngModel]=originalContact?.name type="text" id="name" class="form-control required" size="120" max="120" required>
+        </div>
+
+        <div class="col-sm-12 form-group">
+          <label for="email">Email</label>
+          <input pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" #email="ngModel" name="email" [ngModel]=originalContact?.email type="text" id="email" class="form-control required" size="120" max="255" required>
+          <div class="alert alert-danger" *ngIf="email.dirty && !email.valid">Enter a valid Email address</div>
+        </div>
+        <div class="col-sm-12 form-group">
+          <label for="phone">Phone</label>
+          <input pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*" #phone="ngModel" name="phone" [ngModel]="originalContact?.phone" type="text" id="phone" class="form-control invalid" size="150" max="255">
+          <div class="alert alert-danger" *ngIf="phone.dirty && !phone.valid">Enter a valid phone number</div>
+        </div>
+
+        <div class="col-sm-12 form-group">
+          <label for="imageUrl">Image URL</label>
+          <input #imageUrl name="imageUrl" [ngModel]="originalContact?.imageUrl" type="text" id="imageUrl" class="form-control" size="150" max="255">
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="groupList">Group contacts</label>
+
+        <div *ngIf="invalidGroupContact" class="alert alert-danger">Contact is already in the group, or is the current contact</div>
+        <div dnd-droppable [dropZones]="['contactGroup']" (onDropSuccess)="addToGroup($event)" class="row" id="groupList" style="min-height: 3rem;">
+          <div *ngFor="let contact of groupContacts; let i = index">
+            <div>
+              <cms-contact-item class="col-sm-11" [contact]="contact"></cms-contact-item>
+              <button class="btn btn-danger col-sm-2 deleteButton" (click)="onRemoveItem(i)">X</button>
+            </div>
+          </div>
+          <span class="dragMsg" *ngIf="groupContacts?.length < 1">Drag contacts in group here</span>
+        </div>
+      </div>
+
+
+      <div class="alert alert-danger" *ngIf="!name.valid || !email.valid">The Name and Email are required</div>
+      <div class="row">
+        <div class="col-xs-12">
+          <button [disabled]="!f.valid" class="btn btn-success" type="submit">Save</button>
+          <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
